updated after lunch

--- a/website/pages/exclusive-store.html
+++ b/website/pages/exclusive-store.html
@@ -237,14 +237,16 @@
                                 </div>
                             </div>
                             <div class="account-store-profile pb-2">
-                                <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
-                                <div class="store-name exclus-store">
-                                    <h4>Teez Baby store</h4>
-                                    <p class="restrict-paragraph">Welcome to the number automobile store on Bay
-                                        area,
-                                        California. We have the best
-                                        cars your can ever hope for and we also deal on car parts too.</p>
-                                </div>
+                                <a href="store.html">
+                                    <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
+                                    <div class="store-name exclus-store">
+                                        <h4>Teez Baby store</h4>
+                                        <p class="restrict-paragraph">Welcome to the number automobile store on Bay
+                                            area,
+                                            California. We have the best
+                                            cars your can ever hope for and we also deal on car parts too.</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -260,14 +262,16 @@
                                 </div>
                             </div>
                             <div class="account-store-profile pb-2">
-                                <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
-                                <div class="store-name exclus-store">
-                                    <h4>Teez Baby store</h4>
-                                    <p class="restrict-paragraph">Welcome to the number automobile store on Bay
-                                        area,
-                                        California. We have the best
-                                        cars your can ever hope for and we also deal on car parts too.</p>
-                                </div>
+                                <a href="store.html">
+                                    <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
+                                    <div class="store-name exclus-store">
+                                        <h4>Teez Baby store</h4>
+                                        <p class="restrict-paragraph">Welcome to the number automobile store on Bay
+                                            area,
+                                            California. We have the best
+                                            cars your can ever hope for and we also deal on car parts too.</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -283,14 +287,16 @@
                                 </div>
                             </div>
                             <div class="account-store-profile pb-2">
-                                <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
-                                <div class="store-name exclus-store">
-                                    <h4>Teez Baby store</h4>
-                                    <p class="restrict-paragraph">Welcome to the number automobile store on Bay
-                                        area,
-                                        California. We have the best
-                                        cars your can ever hope for and we also deal on car parts too.</p>
-                                </div>
+                                <a href="store.html">
+                                    <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
+                                    <div class="store-name exclus-store">
+                                        <h4>Teez Baby store</h4>
+                                        <p class="restrict-paragraph">Welcome to the number automobile store on Bay
+                                            area,
+                                            California. We have the best
+                                            cars your can ever hope for and we also deal on car parts too.</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -306,14 +312,16 @@
                                 </div>
                             </div>
                             <div class="account-store-profile pb-2">
-                                <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
-                                <div class="store-name exclus-store">
-                                    <h4>Teez Baby store</h4>
-                                    <p class="restrict-paragraph">Welcome to the number automobile store on Bay
-                                        area,
-                                        California. We have the best
-                                        cars your can ever hope for and we also deal on car parts too.</p>
-                                </div>
+                                <a href="store.html">
+                                    <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
+                                    <div class="store-name exclus-store">
+                                        <h4>Teez Baby store</h4>
+                                        <p class="restrict-paragraph">Welcome to the number automobile store on Bay
+                                            area,
+                                            California. We have the best
+                                            cars your can ever hope for and we also deal on car parts too.</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -329,14 +337,16 @@
                                 </div>
                             </div>
                             <div class="account-store-profile pb-2">
-                                <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
-                                <div class="store-name exclus-store">
-                                    <h4>Teez Baby store</h4>
-                                    <p class="restrict-paragraph">Welcome to the number automobile store on Bay
-                                        area,
-                                        California. We have the best
-                                        cars your can ever hope for and we also deal on car parts too.</p>
-                                </div>
+                                <a href="store.html">
+                                    <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
+                                    <div class="store-name exclus-store">
+                                        <h4>Teez Baby store</h4>
+                                        <p class="restrict-paragraph">Welcome to the number automobile store on Bay
+                                            area,
+                                            California. We have the best
+                                            cars your can ever hope for and we also deal on car parts too.</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -352,14 +362,16 @@
                                 </div>
                             </div>
                             <div class="account-store-profile pb-2">
-                                <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
-                                <div class="store-name exclus-store">
-                                    <h4>Teez Baby store</h4>
-                                    <p class="restrict-paragraph">Welcome to the number automobile store on Bay
-                                        area,
-                                        California. We have the best
-                                        cars your can ever hope for and we also deal on car parts too.</p>
-                                </div>
+                                <a href="store.html">
+                                    <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
+                                    <div class="store-name exclus-store">
+                                        <h4>Teez Baby store</h4>
+                                        <p class="restrict-paragraph">Welcome to the number automobile store on Bay
+                                            area,
+                                            California. We have the best
+                                            cars your can ever hope for and we also deal on car parts too.</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -375,14 +387,16 @@
                                 </div>
                             </div>
                             <div class="account-store-profile pb-2">
-                                <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
-                                <div class="store-name exclus-store">
-                                    <h4>Teez Baby store</h4>
-                                    <p class="restrict-paragraph">Welcome to the number automobile store on Bay
-                                        area,
-                                        California. We have the best
-                                        cars your can ever hope for and we also deal on car parts too.</p>
-                                </div>
+                                <a href="store.html">
+                                    <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
+                                    <div class="store-name exclus-store">
+                                        <h4>Teez Baby store</h4>
+                                        <p class="restrict-paragraph">Welcome to the number automobile store on Bay
+                                            area,
+                                            California. We have the best
+                                            cars your can ever hope for and we also deal on car parts too.</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -398,14 +412,16 @@
                                 </div>
                             </div>
                             <div class="account-store-profile pb-2">
-                                <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
-                                <div class="store-name exclus-store">
-                                    <h4>Teez Baby store</h4>
-                                    <p class="restrict-paragraph">Welcome to the number automobile store on Bay
-                                        area,
-                                        California. We have the best
-                                        cars your can ever hope for and we also deal on car parts too.</p>
-                                </div>
+                                <a href="store.html">
+                                    <img src="../assets/images/store/store-3.png" alt="" class="mb-12">
+                                    <div class="store-name exclus-store">
+                                        <h4>Teez Baby store</h4>
+                                        <p class="restrict-paragraph">Welcome to the number automobile store on Bay
+                                            area,
+                                            California. We have the best
+                                            cars your can ever hope for and we also deal on car parts too.</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
