--- a/website/pages/store-draft.html
+++ b/website/pages/store-draft.html
@@ -168,18 +168,18 @@
                                         </a>
                                     </div> -->
                                     <ul class="navbar-nav ms-xl-auto mb-2 mb-lg-0 ">
-                                        <li class="nav-item ms-22">
+                                          <li class="nav-item ms-22">
                                             <a class="nav-link " aria-current="page"
                                                 href="exclusive-store.html">Exclusive store</a>
                                         </li>
                                         <li class="nav-item ms-22">
-                                            <a class="nav-link" href="#">Handmade products</a>
+                                            <a class="nav-link" href="handmade-products.html">Handmade products</a>
                                         </li>
                                         <li class="nav-item ms-22">
-                                            <a class="nav-link" href="#">Food courts</a>
+                                            <a class="nav-link" href="foodcart.html">Food courts</a>
                                         </li>
                                         <li class="nav-item ms-22">
-                                            <a class="nav-link" href="#">Open market</a>
+                                            <a class="nav-link" href="open-market.html">Open market</a>
                                         </li>
                                         <li class="nav-item ms-22">
                                             <a class="nav-link" href="#">Advertise here</a>
