--- a/website/pages/view-store.html
+++ b/website/pages/view-store.html
@@ -240,7 +240,7 @@
                             <h4 class="mb-0">Cars Stand</h4>
                             <a href="#" class="btn btn-market radius-100" data-bs-toggle="offcanvas"
                                 data-bs-target="#add-product" aria-controls="offcanvasRight">Add new product <i
-                                    class="fa fa-plus"></i></a>
+                                    class="fa fa-plus ms-1"></i></a>
                         </div>
 
                         <div class="store-view">
